--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PronuntiApp_Oreo_sms2324"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".HomePageLogopedista"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PronuntiApp_Oreo_sms2324">
@@ -23,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
