--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".HomePageLogopedista"></activity>
         <activity android:name=".HomePage"></activity>
         <activity android:name=".IntermediatePage"></activity>
+        <activity android:name=".HomePageGenitore"></activity>
     </application>
 
 </manifest>
