--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ListaGenitori"/>
         <activity android:name=".HomePageLogopedista"></activity>
         <activity android:name=".HomePage"></activity>
         <activity android:name=".IntermediatePage"></activity>
