scelta personaggi più scrittura database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity android:name=".IntermediatePage"></activity>
         <activity android:name=".HomePageGenitore"></activity>
         <activity android:name=".HomePageBambino"/>
+        <activity android:name=".VisualizzaScenario"/>
+        <activity android:name=".SceltaPersonaggioPiratesco"/>
 
     </application>
 
