--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <activity android:name=".HomePage"></activity>
         <activity android:name=".IntermediatePage"></activity>
         <activity android:name=".HomePageGenitore"></activity>
+        <activity android:name=".HomePageBambino"></activity>
     </application>
 
 </manifest>
