--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomePageBambino"></activity>
         <activity android:name=".SceltaScenarioActivity" />
         <activity android:name=".ScenarioFiabescoActivity" />
         <activity android:name=".ScenarioSavanaActivity" />
@@ -64,7 +65,7 @@
         <activity android:name=".HomePage"></activity>
         <activity android:name=".IntermediatePage"></activity>
         <activity android:name=".HomePageGenitore"></activity>
-        <activity android:name=".HomePageBambino"></activity>
+        <activity android:name=".LeaderboardActivity"></activity>
     </application>
 
 </manifest>
